// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logical parses single line: !a 1`] = `
logical ! (1:0-1:2)
  other (1:1-1:2) a
`;

exports[`logical parses single line: a && b || c 1`] = `
logical || (1:0-1:11)
  logical && (1:0-1:6)
    other (1:0-1:1) a
    other (1:5-1:6) b
  other (1:10-1:11) c
`;

exports[`logical parses single line: a || b && c 1`] = `
logical || (1:0-1:11)
  other (1:0-1:1) a
  logical && (1:5-1:11)
    other (1:5-1:6) b
    other (1:10-1:11) c
`;
